[gd_scene load_steps=3 format=3 uid="uid://cnu7dauthscbc"]

[ext_resource type="Script" path="res://World/Levels/Main.gd" id="1_51e8s"]
[ext_resource type="PackedScene" uid="uid://bn1p6i74uy0gv" path="res://World/Managers/BulletManager.tscn" id="2_pt2lv"]

[node name="Main" type="Node2D"]
script = ExtResource("1_51e8s")

[node name="Camera2D" type="Camera2D" parent="."]
position_smoothing_enabled = true
rotation_smoothing_enabled = true
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_horizontal_offset = 1.0
drag_vertical_offset = 1.0

[node name="BulletManager" parent="." instance=ExtResource("2_pt2lv")]

[node name="RespawnTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="RespawnTimer" to="." method="_on_respawn_timer_timeout"]
